--- a/app/src/main/res/layout/item_trending_post.xml
+++ b/app/src/main/res/layout/item_trending_post.xml
@@ -1,67 +1,71 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardCornerRadius="16dp"
+    app:cardElevation="8dp"
+    android:background="@drawable/gradient_card_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="12dp">
 
-        <ImageView
-            android:id="@+id/imageViewTrendingThumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/noanime" />
-
+        <!-- Episode Title -->
         <TextView
-            android:id="@+id/textViewTrendingTitle"
-            android:layout_width="wrap_content"
+            android:id="@+id/textViewEpisodeTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:text="Anime Title"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageViewTrendingThumbnail"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textViewTrendingRating"
-            android:layout_width="125dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="24dp"
-            android:paddingStart="16dp"
-            android:text="⭐ 8.5/10 Avg"
-            android:textColor="@android:color/holo_orange_dark"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="Episode Title"
             android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@+id/textViewTrendingTitle"
-            app:layout_constraintStart_toStartOf="@+id/textViewTrendingTitle"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTrendingTitle" />
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/imageViewPhoto"
+            app:layout_constraintTop_toTopOf="parent"/>
 
+        <!-- Average Rating -->
         <TextView
-            android:id="@+id/textViewTrendingCount"
+            android:id="@+id/textViewRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:text="100 Reviews"
+            android:text="⭐ 8.5/10"
+            android:textColor="@android:color/holo_orange_dark"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewEpisodeTitle"
+            android:layout_marginTop="4dp"/>
+
+        <!-- Number of Posts -->
+        <TextView
+            android:id="@+id/textViewPostCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100 reviews"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/textViewTrendingRating"
-            app:layout_constraintHorizontal_bias="0.23"
-            app:layout_constraintStart_toStartOf="@+id/textViewTrendingRating"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTrendingRating" />
+            app:layout_constraintStart_toEndOf="@id/textViewRating"
+            app:layout_constraintTop_toBottomOf="@id/textViewEpisodeTitle"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"/>
+
+        <!-- Image (Anime Thumbnail) -->
+        <ImageView
+            android:id="@+id/imageViewPhoto"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
+            android:scaleType="centerCrop"
+            android:background="@android:color/white"
+            android:src="@drawable/noanime"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textViewEpisodeTitle"
+            app:layout_constraintBottom_toBottomOf="@id/textViewPostCount"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
